upgrade to spring 3, jakarta and open telemetry (#21)