@@ -4,7 +4,7 @@ dependencies {
     swaggerCodegen 'io.swagger.codegen.v3:swagger-codegen-cli'
 
     // Versioned by Spring:
-    implementation 'javax.validation:validation-api'
+    implementation 'jakarta.validation:jakarta.validation-api'
     implementation 'org.webjars:webjars-locator-core'
 
     annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
@@ -16,7 +16,6 @@ generateSwaggerCode {
     inputFile = file('src/main/resources/api/openapi.yml')
     language = 'spring'
     components = ['models', 'apis']
-    jvmArgs = ['--add-opens=java.base/java.util=ALL-UNNAMED']
     additionalProperties = [
         modelPackage     : "${artifactGroup}.model",
         apiPackage       : "${artifactGroup}.api",
@@ -24,6 +23,7 @@ generateSwaggerCode {
         java8            : true,
         interfaceOnly    : 'true',
         useTags          : 'true',
+        jakarta          : 'true',
         springBootVersion: dependencyManagement.managedVersions['org.springframework.boot:spring-boot']
     ]
 }
